--- a/src/sbin/bioctl/bioctl.8
+++ b/src/sbin/bioctl/bioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bioctl.8,v 1.88 2012/01/29 16:51:52 krw Exp $
+.\"	$OpenBSD: bioctl.8,v 1.89 2012/01/29 17:26:13 jmc Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Marco Peereboom
 .\"
@@ -302,10 +302,12 @@ using a new chunk on wd0d:
 .Xr bio 4 ,
 .Xr scsi 4 ,
 .Xr softraid 4
+.Sh STANDARDS
 .Rs
+.%A B. Kaliski
+.%D September 2000
 .%R RFC 2898
-.%T "PKCS #5: Password-Based Cryptography Specification Version 2.0"
-.%D 2000
+.%T PKCS #5: Password-Based Cryptography Specification Version 2.0
 .Re
 .Sh HISTORY
 The
